style(infra): format some java file